rex_config teilweise einbeziehen (package-config und package-order)

--- a/package.yml
+++ b/package.yml
@@ -10,6 +10,9 @@ config:
     fixtures:
         tables:
             action: ~
+            config:
+                - { namespace: core, key: package-config }
+                - { namespace: core, key: package-order }
             markitup_profiles: ~
             media_manager_type: ~
             media_manager_type_effect: ~
