--- a/package.yml
+++ b/package.yml
@@ -38,13 +38,16 @@ config:
             yform_field: ~
             yform_table: ~
     protected_pages:
-        - install
-        - markitup
-        - media_manager
-        - metainfo
-        - modules
-        - packages
-        - redactor2
-        - templates
-        - yform/manager/table_edit
-        - yform/manager/table_field
+        install: ~
+        markitup: ~
+        media_manager: ~
+        metainfo: ~
+        modules: ~
+        packages: ~
+        redactor2: ~
+        templates: ~
+        yform/manager:
+            - table_edit
+            - table_migrate
+            - tableset_import
+            - table_field
