--- a/package.yml
+++ b/package.yml
@@ -11,6 +11,15 @@ conflicts:
     packages:
         developer: '<3.7'
 
+console_commands:
+    ydeploy:diff: rex_ydeploy_command_diff
+    ydeploy:migrate: rex_ydeploy_command_migrate
+
+pages:
+    system/ydeploy:
+        title: YDeploy
+        pjax: false
+
 config:
     fixtures:
         tables:
@@ -29,11 +38,17 @@ config:
             redactor2_profiles: ~
             yform_field: ~
             yform_table: ~
-
-console_commands:
-    ydeploy:diff: rex_ydeploy_command_diff
-    ydeploy:migrate: rex_ydeploy_command_migrate
-
-pages:
-    system/ydeploy:
-        title: YDeploy
+    protected_pages:
+        install: ~
+        markitup: ~
+        media_manager: ~
+        metainfo: ~
+        modules: ~
+        packages: ~
+        redactor2: ~
+        templates: ~
+        yform/manager:
+            - table_edit
+            - table_migrate
+            - tableset_import
+            - table_field
