--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 package: ydeploy
 version: '1.0-beta7'
 author: Gregor Harlan
-supportpage: www.redaxo.org/de/forum/
+supportpage: https://github.com/yakamara/ydeploy
 
 requires:
     php: ^7.1
