--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -12,9 +12,8 @@ return PhpCsFixer\Config::create()
         '@Symfony:risky' => true,
         '@PHP71Migration' => true,
         '@PHP71Migration:risky' => true,
-        '@PHPUnit60Migration:risky' => true,
+        '@PHPUnit75Migration:risky' => true,
         'array_indentation' => true,
-        'array_syntax' => ['syntax' => 'short'],
         'braces' => ['allow_single_line_closure' => false],
         'comment_to_phpdoc' => true,
         'declare_strict_types' => false,
@@ -29,7 +28,7 @@ return PhpCsFixer\Config::create()
         'no_unreachable_default_argument_value' => true,
         'no_useless_else' => true,
         'no_useless_return' => true,
-        'ordered_imports' => true,
+        'ordered_class_elements' => true,
         'phpdoc_order' => true,
         'phpdoc_trim_consecutive_blank_line_separation' => true,
         'phpdoc_types_order' => true,
