--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,27 @@
     "name": "yakamara/ydeploy",
 
     "require-dev": {
+        "deployer/deployer": "^6.8",
         "friendsofphp/php-cs-fixer": "^3.4",
         "friendsofredaxo/linter": "^1.3",
-        "redaxo/php-cs-fixer-config": "^1.0"
+        "redaxo/php-cs-fixer-config": "^1.0",
+        "redaxo/psalm-plugin": "^1.0",
+        "redaxo/source": "^5.10",
+        "vimeo/psalm": "^4.21"
     },
 
     "autoload": {
         "classmap": [
             "lib/"
+        ],
+        "files": [
+            "deployer/functions.php"
         ]
     },
 
     "scripts": {
-        "cs": "php-cs-fixer fix -v --ansi"
+        "cs": "php-cs-fixer fix -v --ansi",
+        "psalm": "psalm --no-suggestions"
     },
 
     "config": {
