--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: ydeploy
-version: '1.0.0'
+version: '1.1.0'
 author: Gregor Harlan
 supportpage: https://github.com/yakamara/ydeploy
 
@@ -57,3 +57,10 @@ config:
                 - table_migrate
                 - tableset_import
                 - table_field
+
+installer_ignore:
+    - .github
+    - .gitignore
+    - .php-cs-fixer.cache
+    - .php-cs-fixer.dist.php
+    - psalm.xml
