--- a/package.yml
+++ b/package.yml
@@ -1,10 +1,10 @@
 package: ydeploy
-version: '1.2.0'
+version: '2.0.0-dev'
 author: Gregor Harlan
 supportpage: https://github.com/yakamara/ydeploy
 
 requires:
-    php: '>=7.3'
+    php: '>=8.1'
     redaxo: ^5.10
 
 conflicts:
