--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
     "name": "yakamara/ydeploy",
 
+    "require": {
+        "php": ">=8.1"
+    },
+
     "require-dev": {
-        "deployer/deployer": "^6.8",
-        "friendsofphp/php-cs-fixer": "^3.4",
-        "friendsofredaxo/linter": "^1.3",
-        "redaxo/php-cs-fixer-config": "^1.0",
-        "redaxo/psalm-plugin": "^1.0",
-        "redaxo/source": "^5.10",
-        "vimeo/psalm": "^4.21"
+        "deployer/deployer": "^6.9",
+        "friendsofphp/php-cs-fixer": "^3.34.0",
+        "friendsofredaxo/linter": "^1.4",
+        "redaxo/php-cs-fixer-config": "^2.2.0",
+        "redaxo/psalm-plugin": "^2.0",
+        "redaxo/source": "^5.14.3",
+        "vimeo/psalm": "^5.15"
     },
 
     "autoload": {
@@ -29,10 +33,7 @@
         "optimize-autoloader": true,
         "sort-packages": true,
         "platform": {
-            "php": "7.3.0"
-        },
-        "allow-plugins": {
-            "composer/package-versions-deprecated": true
+            "php": "8.1.17"
         }
     }
 }
