--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
         "deployer/deployer": "^6.9",
         "friendsofphp/php-cs-fixer": "^3.34.0",
         "redaxo/php-cs-fixer-config": "^2.2.0",
-        "redaxo/psalm-plugin": "^2.0",
-        "redaxo/source": "^5.14.3",
-        "vimeo/psalm": "^5.15"
+        "redaxo/source": "^5.14.3"
     },
 
     "autoload": {
@@ -24,8 +22,7 @@
     },
 
     "scripts": {
-        "cs": "php-cs-fixer fix -v --ansi",
-        "psalm": "psalm --no-suggestions"
+        "cs": "php-cs-fixer fix -v --ansi"
     },
 
     "config": {
