--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,9 @@
     },
 
     "require-dev": {
-        "deployer/deployer": "^6.9",
+        "deployer/deployer": "^7.3.1",
         "friendsofphp/php-cs-fixer": "^3.34.0",
-        "redaxo/php-cs-fixer-config": "^2.2.0",
-        "redaxo/source": "^5.14.3"
+        "redaxo/php-cs-fixer-config": "^2.2.0"
     },
 
     "autoload": {
