--- a/package.yml
+++ b/package.yml
@@ -62,6 +62,7 @@ config:
 
 installer_ignore:
     - .github
+    - .tools
     - .gitignore
     - .php-cs-fixer.cache
     - .php-cs-fixer.dist.php
