--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 package: ydeploy
-version: '2.0.0-beta1'
+version: '2.0.0'
 author: Gregor Harlan
 supportpage: https://github.com/yakamara/ydeploy
 
