--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -121,4 +121,4 @@ jobs:
             # run rexstan
             -   id: rexstan
                 name: Run rexstan
-                run: redaxo_cms/redaxo/bin/console rexstan:analyze
+                run: redaxo_cms/redaxo/bin/console rexstan:analyze -vvv
